# survision-sim

./: .gitignore  README.md  config.json  install_pydantic.sh  logging.conf  pyproject.toml  run_simulator.py
survision_simulator/: config_manager.py  data_store.py  device_logic.py  main.py  models.py
survision_simulator/server/: http_server.py  websocket_server.py
survision_simulator/webui/static_files/: index.html  script.js  styles.css
