[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survision-sim"
version = "0.1.0"
description = "Survision Device Simulator"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0.0",
    "websockets>=11.0.3",
]

[project.scripts]
survision-sim = "survision_simulator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["survision_simulator"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 